--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("Shade_RAR.jpg");
+	background-image: url("exploded2.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
