Add social media links to website

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
-	background-image: url("exploded2.png");
+	background-image: url("images/exploded2.png");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center bottom;
 	font-family: 'Dosis', sans-serif;
+	overflow: hidden;
 }
 
 p {
@@ -25,7 +26,7 @@ p {
    user-select: none;
 }
 
-div {
+div.coming-soon {
 	width: 100%;
 	height: 1px;
 	
@@ -36,4 +37,20 @@ div {
 	right: 0;
   	
 	margin: auto;
+}
+
+div.social-media {
+	width: 100%;
+	height: 1px;
+	text-align: center;
+	position: absolute;
+	bottom: 100px;
+}
+div.social-media a {
+	text-decoration: none;
+}
+
+div img {
+	padding-left: 10px;
+	padding-right: 10px;
 }
